--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
 eclipse.preferences.version=1
+encoding//src/main/java/collections/FlipKart.java=UTF-8
 encoding//src/main/java/week2exercises/Actionspe.java=UTF-8
 encoding//src/main/java/week3day1/Movemouseover.java=UTF-8
 encoding//src/main/java/week8_day1/Collection_flipkart.java=UTF-8
 encoding//src/main/java/week8_day1/Collection_flipkart1.java=UTF-8
+encoding//src/main/java/week8_day1/GreatestAmount.java=UTF-8
+encoding//src/main/java/week8_day1/Repeatingvalues.java=UTF-8
